--- a/TP1 - Probabilités/tp1.ipynb
+++ b/TP1 - Probabilités/tp1.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1."
+    "## 1. Récupération des données"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2."
+    "## 2. Traitement de la colonne \"Adj Close\""
    ]
   },
   {
@@ -478,7 +478,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3."
+    "## 3. Définition d'un série discrète sur la base de chacune  des séries obtenues."
    ]
   },
   {
@@ -694,7 +694,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4."
+    "## 4. Création de la table des probabilités des St"
    ]
   },
   {
@@ -825,7 +825,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.\n",
+    "## 5. Calcule des indices\n",
     "### Indices de Pr(st, st+1),"
    ]
   },
@@ -1358,7 +1358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6."
+    "## 6. Calcul des couples d'indices"
    ]
   },
   {
@@ -2154,6 +2154,30 @@
     "df_st_prob_datas_indices.plot(kind='bar', rot=0, figsize=(30, 5))\n",
     "plt.legend(loc='lower left', bbox_to_anchor=(1.0, 0.5))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Calcul des indices S(i)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Qu’est-ce que vous pouvez déduire en comparant ces probabilités ?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Comment pensez-vous qu’un agent intelligent pourrait les utiliser pour gagner de l’argent en achetant et vendant ces indices ?\n"
    ]
   }
  ],
