--- a/TP1 - Probabilités/tp1.ipynb
+++ b/TP1 - Probabilités/tp1.ipynb
@@ -2169,7 +2169,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Qu’est-ce que vous pouvez déduire en comparant ces probabilités ?"
+    "## 8. Qu’est-ce que vous pouvez déduire en comparant ces probabilités ?\n",
+    "A partir des résultats afficher ci-dessus, nous remarquons de forte de faible probabilités par d'augmentation ou de baisse du capital dans une bourse à partir des données récuperé."
    ]
   },
   {
@@ -2178,6 +2179,15 @@
    "metadata": {},
    "source": [
     "## 9. Comment pensez-vous qu’un agent intelligent pourrait les utiliser pour gagner de l’argent en achetant et vendant ces indices ?\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Grâce à un agent intelligent, nous pouvons essayer de prédire, à partir de probabilités, une augmentation ou une baisse du capital dans une bourse.<br>\n",
+    "Ainsi il serait possible de prédire un ou plusieurs actions possible pour vendre ou acheter une quantités d'actions."
    ]
   }
  ],
